config-root/namespaces/jx-production/cd-flow-backend/cd-flow-backend-svc.yaml
# Source: cd-flow-backend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cd-flow-backend
  labels:
    chart: "cd-flow-backend-0.0.5"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: cd-flow-backend-cd-flow-backend
