config-root/namespaces/jx-production/cd-flow-backend/cd-flow-backend-ingress.yaml
# Source: cd-flow-backend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: cd-flow-backend
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: cd-flow-backend
              servicePort: 80
      host: cd-flow-backend-jx-production.35.222.17.41.nip.io
